--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "connect-session-firebase": "^5.13.0",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
@@ -19,7 +20,10 @@
     "express-validator": "^5.3.1",
     "firebase": "^7.14.2",
     "firebase-admin": "^8.11.0",
+    "handlebars-helpers": "^0.10.0",
     "http": "0.0.1-security",
+    "http-errors": "^1.7.3",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.3",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
