--- a/package.json
+++ b/package.json
@@ -1,30 +1,27 @@
 {
-  "name": "mycoolapp",
+  "name": "mycoolapptesting",
   "version": "1.0.0",
-  "description": "Michael's app for Software Development SAT",
+  "description": "A cool app for the Software Development SAT",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nodemon",
+    "start": "node server.js"
   },
   "author": "Michael XIE",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^4.0.1",
+    "@google-cloud/connect-firestore": "^1.0.6",
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "connect-session-firebase": "^5.13.0",
-    "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
     "express-session": "^1.17.1",
     "express-validator": "^5.3.1",
-    "firebase": "^7.14.2",
-    "firebase-admin": "^8.11.0",
-    "handlebars-helpers": "^0.10.0",
-    "http": "0.0.1-security",
-    "http-errors": "^1.7.3",
-    "morgan": "^1.10.0",
-    "nodemon": "^2.0.3",
+    "firebase": "^7.15.5",
+    "firebase-admin": "^8.13.0",
+    "moment": "^2.27.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "socket.io": "^2.3.0"
