--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "moment": "^2.27.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "rate-limiter-flexible": "^2.1.9",
     "socket.io": "^2.3.0"
   }
 }
